--- a/index.html
+++ b/index.html
@@ -21,9 +21,64 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+  <!--
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <p class="lead"> 
+          This is my classroom, blah blah blahrus nec nisi sagittis elementum eu eu libero. Cras eros nibh, lobortis non ante eget.
+        </p>
+      </div>
+    </div>
+  -->
 
+  <div class="container">
 
+    <div class="jumbotron">
+      <h1>This is my Classroom</h1>
+      <p>blah blah blahrus nec nisi sagittis elementum eu eu libero. Cras eros nibh, lobortis non ante eget.</p>
+    </div>
+
+    <div class="row">
+      
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="http://placehold.it/200x300" alt="image 1">
+          <div class="caption">
+            <h1 class="text-center"> GitHub </h1>
+          </div>
+        </div>
+      </div> 
+
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="http://placehold.it/200x300" alt="image 2">
+          <div class="caption">
+            <h1 class="text-center"> Bootstrap </h1>
+          </div>
+        </div>
+      </div>  
+
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="http://placehold.it/200x300" alt="image 3">
+          <div class="caption">
+            <h1 class="text-center"> Sketch </h1>
+          </div>
+        </div>
+      </div>  
+
+      <div class="col-md-3">
+        <div class="thumbnail">
+          <img src="http://placehold.it/200x300" alt="image 4">
+          <div class="caption">
+            <h1 class="text-center"> Photoshop </h1>
+          </div>
+        </div>
+      </div>  
+
+    </div>
+
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
